--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Home.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Home.html
@@ -27,19 +27,17 @@
 
 <!-- Sign-in box -->
 <!-- Not sure if we have an action for getting the login information yet so getLogin is a placeholder name -->
-<form action="getLogin" method="post">
+<form action="Login" method="post">
   
   <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <label for="username"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="username" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+<br>
+    <label for="pass"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="pass" required>
 
     <button type="submit">Login</button>
-    <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
-    </label>
   </div>
 
 </form>
