Update the Login Servlet

--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Accounts.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Accounts.html
@@ -16,7 +16,7 @@
 <!-- Navigation Links -->
 <nav>
 <ul>
-<li><a href="pc_parts_Home.html">Home</a></li>
+<li><a href="pc_parts_Login.html">Log Out</a></li>
 <li><a href="pc_parts_Accounts.html">Accounts</a></li>
 <li><a href="pc_parts_Listings.html">Listings</a></li>
 <li><a href="pc_parts_Forum.html">Forum</a></li>
