--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Listings.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Listings.html
@@ -18,7 +18,7 @@
 <!-- Navigation Links -->
 <!-- Custom Nav class for a split navbar, utility links are right aligned, normal navigation is left aligned -->
 <div class="topnav">
-<a href="pc_parts_Home.html">Home</a>
+<a href="pc_parts_Login.html">Log Out</a>
 <a href="pc_parts_Accounts.html">Accounts</a>
 <a href="pc_parts_Listings.html">Listings</a>
 <a href="pc_parts_Forum.html">Forum</a>
