Add CreateAccount Servlet, Add CreateAccount html page, Modifications to HTML Style such as centering forms.

--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
@@ -15,10 +15,18 @@
 	<h1>PC Part Picker</h1>
 </header>
 
+<!-- Navigation Links -->
+<nav>
+  <ul>
+  <li><a href="pc_parts_Home.html">Home</a></li>
+  <li><a href="pc_parts_Accounts.html">Accounts</a></li>
+  <li><a href="pc_parts_Listings.html">Listings</a></li>
+  <li><a href="pc_parts_Forum.html">Forum</a></li>
+  </ul>
+  </nav>
 
 <!-- Sign-in box -->
-<!-- Not sure if we have an action for getting the login information yet so getLogin is a placeholder name -->
-<form action="Login" method="post">
+<div align="center"></div><form action="Login" method="post">
   
   <div class="container">
     <label for="username"><b>Username</b></label>
@@ -30,7 +38,7 @@
 
     <button type="submit">Login</button>
   </div>
-
 </form>
+</div>
 </body>
 </html>
