Demo Final Build

--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Listings.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Listings.html
@@ -29,7 +29,19 @@
 <!-- Search Bar -->
 <!-- Forms action is a placeholder name still -->
 <form action="searchListings">
-<input type="text" placeholder="Search Listings">
+
+<label for="param">Search by...</label>
+<select name="searchParam" id="param" required>
+
+	<option value="model">Model</option>
+	<option value="price">Price</option>
+	<option value="city">City</option>
+	<option value="partType">Part Type</option>
+	<option value="brand">Brand</option>
+	<option value="condition">Condition</option>
+</select>
+
+<input type="text" placeholder="Insert Keyword Here" id="search" required>
 <input type="submit" value="Submit">
 </form>
 </body>
