--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
@@ -26,6 +26,7 @@
   </nav>
 
 <!-- Sign-in box -->
+<a href="pc_parts_CreateAccount.html" class="split">Create Account</a>
 <div align="center"></div><form action="Login" method="post">
   
   <div class="container">
