--- a/PCPartsProfessionals/src/main/webapp/pc_parts_CreateListing.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_CreateListing.html
@@ -23,7 +23,7 @@
 </nav>
 
 <!-- Create Listing Form -->
-<div align="center"><form action="CreateListing">
+<div align="center"><form action="MyCreateListing">
   <h1>Create Listing</h1>
       <p>Please fill in this form to create a listing.</p>
     <label for="Model"></label>
