--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
@@ -18,7 +18,7 @@
 <!-- Navigation Links -->
 <nav>
   <ul>
-  <li><a href="pc_parts_Home.html">Home</a></li>
+  <li><a href="pc_parts_Login.html">Home</a></li>
   <li><a href="pc_parts_Accounts.html">Accounts</a></li>
   <li><a href="pc_parts_Listings.html">Listings</a></li>
   <li><a href="pc_parts_Forum.html">Forum</a></li>
