--- a/PCPartsProfessionals/src/main/webapp/pc_parts_CreateListing.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_CreateListing.html
@@ -14,13 +14,13 @@
 </header>
 
 <!-- Navigation Links -->
-<nav>
-<ul>
-<li><a href="pc_parts_Login.html">Log Out</a></li>
-<li><a href="pc_parts_Listings.html">Listings</a></li>
-<li><a href="pc_parts_Forum.html">Forum</a></li>
-</ul>
-</nav>
+<div class="topnav">
+	<a href="pc_parts_Login.html">Home</a>
+	<a href="pc_parts_Accounts.html">Accounts</a>
+	<a href="pc_parts_Listings.html">Listings</a>
+	<a href="pc_parts_Forum.html">Forum</a>
+	<a href="pc_parts_CreateListing.html" class="split">Create Account</a>
+	</div>
 
 <!-- Create Listing Form -->
 <div align="center"><form action="MyCreateListing">
