--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
@@ -16,17 +16,15 @@
 </header>
 
 <!-- Navigation Links -->
-<nav>
-  <ul>
-  <li><a href="pc_parts_Login.html">Home</a></li>
-  <li><a href="pc_parts_Accounts.html">Accounts</a></li>
-  <li><a href="pc_parts_Listings.html">Listings</a></li>
-  <li><a href="pc_parts_Forum.html">Forum</a></li>
-  </ul>
-  </nav>
+<div class="topnav">
+  <a href="pc_parts_Login.html">Home</a>
+  <a href="pc_parts_Accounts.html">Accounts</a>
+  <a href="pc_parts_Listings.html">Listings</a>
+  <a href="pc_parts_Forum.html">Forum</a>
+  <a href="pc_parts_CreateAccount.html" class="split">Create Account</a>
+  </div>
 
 <!-- Sign-in box -->
-<a href="pc_parts_CreateAccount.html" class="split">Create Account</a>
 <div align="center"></div><form action="Login" method="post">
   
   <div class="container">
