Added sustained user in UserUtil and view account button

--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Accounts.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Accounts.html
@@ -23,7 +23,9 @@
 	</div>
 
 <!-- Utility Links -->
-
+<div align="center"><form action="ViewAccount">
+    <button type="submit">View Account</button>
+    </form></div>
 
 </body>
 </html>
