--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Login</title>
+<title>Home Page</title>
 <!-- Link CSS -->
 <link rel="stylesheet" type="text/css" href="pc_parts_Style.css"/>
 </head>
@@ -17,8 +17,12 @@
 
 <!-- Navigation Links -->
 <div class="topnav">
-<a href="pc_parts_CreateAccount.html" class="split">Create Account</a>
-</div>
+  <a href="pc_parts_Login.html">Home</a>
+  <a href="pc_parts_Accounts.html">Accounts</a>
+  <a href="pc_parts_Listings.html">Listings</a>
+  <a href="pc_parts_Forum.html">Forum</a>
+  <a href="pc_parts_CreateAccount.html" class="split">Create Account</a>
+  </div>
 
 <!-- Sign-in box -->
 <div align="center"></div><form action="Login" method="post">
