--- a/PCPartsProfessionals/src/main/webapp/pc_parts_CreateAccount.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_CreateAccount.html
@@ -18,11 +18,7 @@
 <!-- Navigation Links -->
 <!-- Custom Nav class for a split navbar, utility links are right aligned, normal navigation is left aligned -->
 <div class="topnav">
-<a href="pc_parts_Login.html">Home</a>
-<a href="pc_parts_Accounts.html">Accounts</a>
-<a href="pc_parts_Listings.html">Listings</a>
-<a href="pc_parts_Forum.html">Forum</a>
-<a href="pc_parts_CreateAccount.html" class="split">Create Account</a>
+<a href="pc_parts_Login.html">Log In</a>
 </div>
 
 <!-- Search Bar -->
