--- a/PCPartsProfessionals/src/main/webapp/pc_parts_CreateListing.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_CreateListing.html
@@ -15,11 +15,10 @@
 
 <!-- Navigation Links -->
 <div class="topnav">
-	<a href="pc_parts_Login.html">Home</a>
+	<a href="pc_parts_Login.html">Log Out</a>
 	<a href="pc_parts_Accounts.html">Accounts</a>
 	<a href="pc_parts_Listings.html">Listings</a>
 	<a href="pc_parts_Forum.html">Forum</a>
-	<a href="pc_parts_CreateListing.html" class="split">Create Account</a>
 	</div>
 
 <!-- Create Listing Form -->
