Delete user now deletes listings and updates forums posts

--- a/PCPartsProfessionals/src/main/webapp/pc_parts_CreateListing.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_CreateListing.html
@@ -38,6 +38,10 @@
 
       <label for="City"></label>
       <input type="text" id="city" name="city" placeholder="Enter City"><br>
+      
+      <label for="State"></label>
+      <input type="text" id="state" name="state" placeholder="Enter State"><br>
+      
       <div align="center">
         <label for="Part Type">Part Type:</label>
         <select id="partType" name="partType">
