Updated Search form

--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Listings.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Listings.html
@@ -43,7 +43,7 @@
 			<option value="condition">Condition</option>
 		</select>
 
-		<input type="text" placeholder="Insert Search Term Here" id="search" required>
+		<input type="text" placeholder="Insert Search Term Here" id="search" required name="search">
 		<input type="submit" value="Submit">
 	</form><br>
 
