Updated Search Forrm

--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Forums.html
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Forums.html
@@ -30,7 +30,7 @@
 			<option value="MYUSER">User</option>
 			<option value="TITLE">Title</option>
 		</select>
-		<input type="text" placeholder="Insert Search Term Here" id="search" required>
+		<input type="text" placeholder="Insert Search Term Here" id="search" required name="search">
 		<input type="submit" value="Submit">
 	</form><br>
 
